Fixing java toolchain bug, still propagating extra java command line flags into the plugin build. (#301)